syntax = "proto3";
package sec06;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.example.models.sec06";

message BalanceCheckRequest{
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountsResponse{
  repeated AccountBalance accounts = 1;
}

message WithdrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 amount = 1;
}

message DepositRequest{

  oneof request{
    int32 account_number = 1;
    Money money = 2;
  }

}


service BankService {
  // Unary Communication Channel
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  // Get All Accounts
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountsResponse);

  // Server Streaming
  rpc WithDraw(WithdrawRequest) returns (stream Money);

  // Client Streaming
  rpc Deposit(stream DepositRequest) returns (AccountBalance);

}